navbar fixée replacée en  premier plan en specifiant z-index 1 pour le body et z index 2 pour la navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,18 @@
 .navbar {
   justify-content: space-between;
   padding: 0px;
-
-  height: 10%;
+  height: 40px;
   top: 0;
   width: 100%;
+  position: fixed;
+   z-index: 2;
 }
+
+
+body {
+   z-index: 1;
+}
+
 
 .navbar-brand {
   display: inline-block;
